@@ -18,10 +18,15 @@
     </widget>
    </item>
    <item row="0" column="1" >
-    <widget class="QComboBox" name="comboBox" >
+    <widget class="QComboBox" name="renderType" >
      <item>
       <property name="text" >
        <string>Backbone</string>
+      </property>
+     </item>
+     <item>
+      <property name="text" >
+       <string>Lines</string>
       </property>
      </item>
     </widget>
@@ -52,47 +57,6 @@
      </property>
      <property name="sliderPosition" >
       <number>10</number>
-     </property>
-     <property name="orientation" >
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="invertedAppearance" >
-      <bool>false</bool>
-     </property>
-     <property name="tickPosition" >
-      <enum>QSlider::TicksBothSides</enum>
-     </property>
-     <property name="tickInterval" >
-      <number>4</number>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0" >
-    <widget class="QLabel" name="bondRadiusLabel_3" >
-     <property name="text" >
-      <string>Opacity:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1" >
-    <widget class="QSlider" name="opacitySlider" >
-     <property name="minimum" >
-      <number>0</number>
-     </property>
-     <property name="maximum" >
-      <number>20</number>
-     </property>
-     <property name="singleStep" >
-      <number>1</number>
-     </property>
-     <property name="pageStep" >
-      <number>2</number>
-     </property>
-     <property name="value" >
-      <number>20</number>
-     </property>
-     <property name="sliderPosition" >
-      <number>20</number>
      </property>
      <property name="orientation" >
       <enum>Qt::Horizontal</enum>
